# Godunov_Shock_Tube

./: CMakeLists.txt  Makefile  gas.cpp  gas.h  initial.h  main.cpp  sample.cpp  sample.h  starpu.cpp  starpu.h
Results/: 100pointsU.txt  Godunov_result1000.txt  Godunov_result50.txt  big_plots.py  cells_plots.py  exsolution_of_sod  input_data.txt  plots.py  pointsP.txt  pointsR.txt  res.txt  result100.txt  test10.txt  test9.txt
Results/Test_1/: input_data.txt
Results/Тест Лакса/: input_data.txt
